--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_install:
 
       
 script:
-  gradle clean build docker -PwithAngular=true -PbuildDockerImage=true
+  gradle build docker -PwithAngular=true -PbuildDockerImage=true
