--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.js",
     "build": "npm-run-all --parallel build:de build:en",
-    "build:de": "ng build --prod --aot --base-href /de/ --output-path dist/de/ --i18n-locale de --deploy-url /de/ --i18nFile=./i18n/messages.de.xlf",
-    "build:en": "ng build --prod --aot --base-href /en/ --deploy-url /en/ --output-path dist/en/ --i18n-locale en --i18nFile=./i18n/messages.xlf",
+    "build:de": "ng build --prod --aot --optimization=true --buildOptimizer=true --base-href /de/ --output-path dist/de/ --i18n-locale de --deploy-url /de/ --i18nFile=./i18n/messages.de.xlf",
+    "build:en": "ng build --prod --aot --optimization=true --buildOptimizer=true --base-href /en/ --deploy-url /en/ --output-path dist/en/ --i18n-locale en --i18nFile=./i18n/messages.xlf",
     "test": "ng test --browsers ChromeHeadless --watch=false",
     "test-chromium": "ng test --browsers ChromiumHeadless --watch=false",
     "test-local": "ng test --browsers Chromium --watch=true",
