--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -29,7 +29,12 @@
     "@angular/router": "~8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "chart.js": "~2.7.3",
+    "ng2-charts": "1.6.0",
+    "@angular/material": "^8.0.0",
+    "@angular/cdk": "^8.0.0",
+    "material-design-icons": "3.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
