--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -20,21 +20,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.0",
+    "@angular/cdk": "^8.0.0",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
     "@angular/forms": "~8.0.0",
+    "@angular/material": "^8.0.0",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "chart.js": "~2.9.3",
+    "hammerjs": "^2.0.8",
+    "material-design-icons": "3.0.1",
+    "ng2-charts": "2.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "chart.js": "~2.9.3",
-    "ng2-charts": "2.3.0",
-    "@angular/material": "^8.0.0",
-    "@angular/cdk": "^8.0.0",
-    "material-design-icons": "3.0.1"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
