--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.h2.console.enabled=true
+security.jwt.token.secret-key=secret-key1234567890abcdefghijklmnopqrstuvxyz
+security.jwt.token.expire-length=86400000
