--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'io.r2dbc:r2dbc-proxy:1.0.0.M7'
 	implementation 'io.netty:netty-codec-http'
 	implementation 'org.tuckey:urlrewritefilter:4.0.4'	
