--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
 spring.h2.console.enabled=true
 security.jwt.token.secret-key=secret-key1234567890abcdefghijklmnopqrstuvxyz
 security.jwt.token.expire-length=86400000
+server.compression.enabled=true
+server.http2.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json,application/xml 
+server.compression.min-response-size=2KB
+//Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+messenger.url.uuid.confirm=
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
+
