--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,10 @@
    limitations under the License.
  */
 plugins {
-	id 'org.springframework.boot' version '2.2.0.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+	id 'org.springframework.boot' version '2.2.4.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
-    id 'com.palantir.docker' version '0.22.1'
+    id 'com.palantir.docker' version '0.25.0'
 }
 
 group = 'ch.xxx'
@@ -32,15 +32,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'io.r2dbc:r2dbc-proxy:1.0.0.M7'
+	implementation 'io.r2dbc:r2dbc-proxy'
 	implementation 'io.netty:netty-codec-http'
 	implementation 'org.tuckey:urlrewritefilter:4.0.4'	
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 	implementation 'commons-net:commons-net:3.6'	
-	implementation 'io.jsonwebtoken:jjwt-api:0.10.7'
-	implementation 'io.jsonwebtoken:jjwt-impl:0.10.7'
-	implementation 'io.jsonwebtoken:jjwt-jackson:0.10.7'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.0'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.0'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.0'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
@@ -59,7 +59,7 @@ dependencies {
 
 dependencyManagement {
 	imports {
-		mavenBom 'org.springframework.boot.experimental:spring-boot-bom-r2dbc:0.1.0.M2'
+		mavenBom 'org.springframework.boot.experimental:spring-boot-bom-r2dbc:0.1.0.M3'
 	}
 }
 
