--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ notifications:
   on_failure: always
 
 before_install:
-  - nvm install 10.9
-  - nvm use 10.9
+  - nvm install 12.11
+  - nvm use 12.11
 
       
 script:
-  gradle build docker -PwithAngular=true -PbuildDockerImage=true
+  ./gradlew build docker -PwithAngular=true -PbuildDockerImage=true
