--- a/src/angular/manager/angular.json
+++ b/src/angular/manager/angular.json
@@ -13,10 +13,17 @@
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
+      "i18n": {
+        "locales": {
+          "de": "i18n/messages.de.xlf"
+        },
+        "sourceLocale": "en"
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/manager",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -32,6 +39,16 @@
             "scripts": []
           },
           "configurations": {
+          	"de": {
+              "localize": [
+                "de"
+              ]
+            },
+            "en": {
+              "localize": [
+                "en"
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -53,6 +70,10 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
                 }
               ]
             }
@@ -66,6 +87,9 @@
           "configurations": {
             "production": {
               "browserTarget": "manager:build:production"
+            },
+            "de": {
+              "browserTarget": "manager:build:de"
             }
           }
         },
@@ -118,6 +142,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "manager"
+    }
+  },
+  "defaultProject": "manager",
+  "cli": {
+    "analytics": false
+  }
 }
