--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.h2.console.enabled=true
 security.jwt.token.secret-key=secret-key1234567890abcdefghijklmnopqrstuvxyz
-security.jwt.token.expire-length=86400000
+security.jwt.token.expire-length=60000
 server.compression.enabled=true
 server.http2.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json,application/xml 
