--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.compression.enabled=true
 server.http2.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json,application/xml 
 server.compression.min-response-size=2KB
+spring.codec.max-in-memory-size=2MB
 //Gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -16,4 +17,3 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
-
