--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -12,8 +12,8 @@
     "e2e": "ng e2e",
     "prebuild": "rimraf ./dist && mkdirp ./dist",
     "postbuild": "npm run deploy",
-    "predeploy": "rimraf ../../main/resources/static/de && mkdirp ../../main/resources/static/de && rimraf ../../main/resources/static/en && mkdirp ../../main/resources/static/en",
-    "deploy": "cpx 'dist/manager/**' ../../main/resources/static/"
+    "predeploy": "rimraf ../../main/resources/static/*",
+    "deploy": "cpx 'base/*' dist/manager/ && cpx 'dist/manager/**' ../../main/resources/static/"
   },
   "private": true,
   "dependencies": {
