--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.http2.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json,application/xml 
 server.compression.min-response-size=2KB
 spring.codec.max-in-memory-size=2MB
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
 //Gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
