--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,14 @@ services:
   
 notifications:
   email:
-    - angular2guy@gmx.ch
-  on_success: always
-  on_failure: always
+	recipients:
+      - angular2guy@gmx.ch
+    on_success: always
+    on_failure: always
 
 before_install:
   - nvm install 12.11
   - nvm use 12.11
 
-      
 script:
   ./gradlew build docker -PwithAngular=true -PbuildDockerImage=true
