--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@
    limitations under the License.
  */
 plugins {
-	id 'org.springframework.boot' version '2.2.4.RELEASE'
+	id 'org.springframework.boot' version '2.3.1.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
     id 'com.palantir.docker' version '0.25.0'
@@ -23,14 +23,14 @@ sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
-	maven { url 'https://repo.spring.io/milestone' }
+	maven { url 'https://repo.spring.io/snapshot' }
 }
 
-dependencies {	
-	implementation 'org.springframework.boot.experimental:spring-boot-starter-data-r2dbc'
+dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'io.r2dbc:r2dbc-proxy'
 	implementation 'io.netty:netty-codec-http'
@@ -44,8 +44,9 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	testImplementation 'org.springframework.boot.experimental:spring-boot-test-autoconfigure-r2dbc'
-	testImplementation 'io.projectreactor:reactor-test'			
+	testImplementation 'io.projectreactor:reactor-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+			
 	if(project.hasProperty('withAngular')) {
 		runtimeOnly 'io.r2dbc:r2dbc-postgresql'
 		runtimeOnly 'org.postgresql:postgresql'
@@ -54,12 +55,6 @@ dependencies {
 	} else {
 		runtimeOnly 'com.h2database:h2'
 		runtimeOnly 'io.r2dbc:r2dbc-h2'
-	}
-}
-
-dependencyManagement {
-	imports {
-		mavenBom 'org.springframework.boot.experimental:spring-boot-bom-r2dbc:0.1.0.M3'
 	}
 }
 
