--- a/src/angular/manager/angular.json
+++ b/src/angular/manager/angular.json
@@ -61,6 +61,7 @@
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
+              "localize": true,
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
