--- a/src/angular/manager/angular.json
+++ b/src/angular/manager/angular.json
@@ -59,7 +59,7 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "namedChunks": false,
+              "namedChunks": true,
               "localize": true,
               "aot": true,
               "extractLicenses": true,
