--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -10,6 +10,7 @@
     "test-local": "ng test --browsers Chromium --watch=true",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "postinstall": "ngcc",
     "prebuild": "rimraf ./dist && mkdirp ./dist",
     "postbuild": "npm run deploy",
     "predeploy": "rimraf ../../main/resources/static/*",
@@ -18,20 +19,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.1",
-    "@angular/cdk": "^10.0.0",
+    "@angular/cdk": "^11.1.1",
     "@angular/common": "~11.1.1",
     "@angular/compiler": "~11.1.1",
     "@angular/core": "~11.1.1",
     "@angular/forms": "~11.1.1",
     "@angular/localize": "^11.1.1",
-    "@angular/material": "^10.0.0",
+    "@angular/material": "^11.1.1",
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
     "@swimlane/ngx-charts": "^17.0.0",
     "core-js": "^2.5.7",
     "material-design-icons": "3.0.1",
-    "rxjs": "~6.5.4",
+    "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.3"
