--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: java
 jdk:
   - openjdk11
 
+addons:
+  chrome: beta
+
 services:
   - docker
 
@@ -14,8 +17,8 @@ notifications:
     on_failure: always
 
 before_install:
-  - nvm install 12.11
-  - nvm use 12.11
+  - nvm install 14.15
+  - nvm use 14.15
 
 script:
   ./gradlew build docker -PwithAngular=true -PbuildDockerImage=true
