--- a/src/angular/manager/angular.json
+++ b/src/angular/manager/angular.json
@@ -44,7 +44,7 @@
             "namedChunks": true
           },
           "configurations": {
-          	"de": {
+            "de": {
               "localize": [
                 "de"
               ]
@@ -120,15 +120,11 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
             ]
           }
         },
@@ -149,6 +145,7 @@
   },
   "defaultProject": "manager",
   "cli": {
-    "analytics": false
+    "analytics": false,
+    "defaultCollection": "@angular-eslint/schematics"
   }
 }
