--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -39,14 +39,21 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.1",
+    "@angular-eslint/builder": "12.0.0",
+    "@angular-eslint/eslint-plugin": "12.0.0",
+    "@angular-eslint/eslint-plugin-template": "12.0.0",
+    "@angular-eslint/schematics": "12.0.0",
+    "@angular-eslint/template-parser": "12.0.0",
     "@angular/cli": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
     "cpx": "^1.5.0",
+    "eslint": "^7.26.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
@@ -60,7 +67,6 @@
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
     "typescript": "~4.2.4"
   }
 }
