--- a/src/angular/manager/angular.json
+++ b/src/angular/manager/angular.json
@@ -33,6 +33,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
             "scripts": [],
