--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javasc
 server.compression.min-response-size=2KB
 spring.codec.max-in-memory-size=2MB
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+server.servlet.session.timeout=30s
 
 //Gmail
 spring.mail.host=smtp.gmail.com
