--- a/build.gradle
+++ b/build.gradle
@@ -11,15 +11,14 @@
    limitations under the License.
  */
 plugins {
-	id 'org.springframework.boot' version '2.3.1.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-	id 'java'
-    id 'com.palantir.docker' version '0.25.0'
+	id 'org.springframework.boot' version '2.5.2'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'java'    
 }
 
 group = 'ch.xxx'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '16'
 
 repositories {
 	mavenCentral()
@@ -43,11 +42,10 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
 	
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation group: 'com.tngtech.archunit', name: 'archunit-junit5', version: '0.19.0'
 			
 	if(project.hasProperty('withAngular')) {
 		runtimeOnly 'io.r2dbc:r2dbc-postgresql'
@@ -108,18 +106,6 @@ task testAngular {
 					commandLine('npm', 'run', 'test')
 				}
 			}
-		}
-	}
-}
-
-task buildDockerImage {
-	if(project.hasProperty('buildDockerImage')) {		
-		docker {
-			name 'angular2guy/angularportfoliomgr:latest'
-			buildArgs([JAR_FILE: 'portfoliomgr.jar'])
-			files bootJar.archivePath
-			pull true
-    		noCache true
 		}
 	}
 }
