--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,30 @@ spring.codec.max-in-memory-size=2MB
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 server.servlet.session.timeout=30s
 
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.show-sql=true
+
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
+management.health.mongo.enabled=true
+management.health.enabled=true
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health
+management.endpoints.jmx.exposure.include=health
+
 //Gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
