--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,3 +2,14 @@ spring.r2dbc.url=r2dbc:postgresql://localhost:5432/portfoliomgr
 spring.r2dbc.username=user
 spring.r2dbc.password=password
 #spring.r2dbc.initialization-mode=always
+spring.h2.console.enabled=false
+spring.datasource.initialize=true
+spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/portfoliomgr}
+spring.datasource.username=${POSTGRES_USER:sven1}
+spring.datasource.password=${POSTGRES_PASSWORD:sven1}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=POSTGRESQL
+spring.jpa.database-platform=ch.xxx.manager.config.PGSQLMapDialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.show-sql=true
