--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+api.key={APIKEY:xxx}
+
 spring.h2.console.enabled=true
 security.jwt.token.secret-key=secret-key1234567890abcdefghijklmnopqrstuvxyz
 security.jwt.token.expire-length=60000
@@ -32,6 +34,8 @@ management.health.enabled=true
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=health
 management.endpoints.jmx.exposure.include=health
+
+spring.datasource.password=${:XXX}
 
 //Gmail
 spring.mail.host=smtp.gmail.com
