--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-api.key={APIKEY:xxx}
+api.key=${APIKEY:xxx}
 
 spring.h2.console.enabled=true
 security.jwt.token.secret-key=secret-key1234567890abcdefghijklmnopqrstuvxyz
