--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ server.servlet.session.timeout=30s
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
@@ -33,8 +34,6 @@ management.health.enabled=true
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=health
 management.endpoints.jmx.exposure.include=health
-
-spring.datasource.password=${:XXX}
 
 //Gmail
 spring.mail.host=smtp.gmail.com
