--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 api.key=${APIKEY:xxx}
+show.api.key=false
 
 security.jwt.token.secret-key=secret-key1234567890abcdefghijklmnopqrstuvxyz
 security.jwt.token.expire-length=60000
