--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
     "@swimlane/ngx-charts": "^17.0.0",
+    "ngx-simple-charts": "^0.0.7",
     "core-js": "^2.5.7",
     "material-design-icons": "3.0.1",
     "rxjs": "~6.6.3",
