--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -18,18 +18,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.1",
-    "@angular/cdk": "^12.0.1",
-    "@angular/common": "~12.0.1",
-    "@angular/compiler": "~12.0.1",
-    "@angular/core": "~12.0.1",
-    "@angular/forms": "~12.0.1",
-    "@angular/localize": "^12.0.1",
-    "@angular/material": "^12.0.1",
-    "@angular/platform-browser": "~12.0.1",
-    "@angular/platform-browser-dynamic": "~12.0.1",
-    "@angular/router": "~12.0.1",
+    "@angular/animations": "~12.2.6",
+    "@angular/cdk": "^12.2.6",
+    "@angular/common": "~12.2.6",
+    "@angular/compiler": "~12.2.6",
+    "@angular/core": "~12.2.6",
+    "@angular/forms": "~12.2.6",
+    "@angular/localize": "^12.2.6",
+    "@angular/material": "^12.2.6",
+    "@angular/platform-browser": "~12.2.6",
+    "@angular/platform-browser-dynamic": "~12.2.6",
+    "@angular/router": "~12.2.6",
+    "@angular/material-luxon-adapter": "~12.2.6",
     "ngx-simple-charts": "^0.0.7",
+    "luxon": "^2.0.2",
     "core-js": "^2.5.7",
     "material-design-icons": "3.0.1",
     "rxjs": "~6.6.3",
@@ -38,20 +40,20 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.1",
-    "@angular-eslint/builder": "12.0.0",
-    "@angular-eslint/eslint-plugin": "12.0.0",
-    "@angular-eslint/eslint-plugin-template": "12.0.0",
-    "@angular-eslint/schematics": "12.0.0",
-    "@angular-eslint/template-parser": "12.0.0",
-    "@angular/cli": "~12.0.1",
-    "@angular/compiler-cli": "~12.0.1",
-    "@angular/language-service": "~12.0.1",
+    "@angular-devkit/build-angular": "~12.2.6",
+    "@angular-eslint/builder": "~12.4.1",
+    "@angular-eslint/eslint-plugin": "~12.4.1",
+    "@angular-eslint/eslint-plugin-template": "~12.4.1",
+    "@angular-eslint/schematics": "~12.4.1",
+    "@angular-eslint/template-parser": "~12.4.1",
+    "@angular/cli": "~12.2.6",
+    "@angular/compiler-cli": "~12.2.6",
+    "@angular/language-service": "~12.2.6",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.23.0",
-    "@typescript-eslint/parser": "4.23.0",
+    "@typescript-eslint/eslint-plugin": "~4.23.0",
+    "@typescript-eslint/parser": "~4.23.0",
     "cpx": "^1.5.0",
     "eslint": "^7.26.0",
     "jasmine-core": "~3.6.0",
