--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -31,7 +31,6 @@
     "@angular/router": "~12.2.6",
     "@angular/material-luxon-adapter": "~12.2.6",
     "ngx-simple-charts": "^0.0.7",
-    "luxon": "^2.0.2",
     "core-js": "^2.5.7",
     "material-design-icons": "3.0.1",
     "rxjs": "~6.6.3",
@@ -65,6 +64,8 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-junit-reporter": "~1.2.0",
     "mkdirp": "^0.5.1",
+    "luxon": "^2.0.0",
+    "@types/luxon": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
