--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,4 +8,4 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=ch.xxx.manager.config.PGSQLMapDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
