--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -14,7 +14,8 @@
     "prebuild": "rimraf ./dist && mkdirp ./dist",
     "postbuild": "npm run deploy",
     "predeploy": "rimraf ../../main/resources/static/*",
-    "deploy": "cpx 'base/*' dist/manager/ && cpx 'dist/manager/**' ../../main/resources/static/"
+    "deploy": "cpx 'base/*' dist/manager/ && cpx 'dist/manager/**' ../../main/resources/static/",
+	"prettier": "npx prettier --write 'src/**/*.{ts,html,scss,json}'"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +32,7 @@
     "@angular/router": "~12.2.6",
     "@angular/material-luxon-adapter": "~12.2.6",
     "ngx-simple-charts": "^1.0.2",
+	"ngx-simple-charts/line": "^1.0.2",
     "core-js": "^2.5.7",
     "material-design-icons": "3.0.1",
     "rxjs": "~6.6.3",
@@ -50,6 +52,7 @@
     "@angular/language-service": "~12.2.6",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/luxon": "^2.0.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "~4.23.0",
     "@typescript-eslint/parser": "~4.23.0",
@@ -63,10 +66,10 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-junit-reporter": "~1.2.0",
-    "mkdirp": "^0.5.1",
     "luxon": "^2.0.0",
-    "@types/luxon": "^2.0.0",
+    "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.4.1",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "~8.3.0",
