--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -41,11 +41,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.6",
-    "@angular-eslint/builder": "~12.4.1",
-    "@angular-eslint/eslint-plugin": "~12.4.1",
-    "@angular-eslint/eslint-plugin-template": "~12.4.1",
-    "@angular-eslint/schematics": "~12.4.1",
-    "@angular-eslint/template-parser": "~12.4.1",
+    "@angular-eslint/builder": "^13.0.0-alpha.0",
+    "@angular-eslint/eslint-plugin": "^13.0.0-alpha.0",
+    "@angular-eslint/eslint-plugin-template": "^13.0.0-alpha.0",
+    "@angular-eslint/schematics": "^13.0.0-alpha.0",
+    "@angular-eslint/template-parser": "^13.0.0-alpha.0",
     "@angular/cli": "~12.2.6",
     "@angular/compiler-cli": "~12.2.6",
     "@angular/language-service": "~12.2.6",
@@ -61,7 +61,7 @@
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-junit-reporter": "~1.2.0",
