--- a/src/angular/manager/tsconfig.json
+++ b/src/angular/manager/tsconfig.json
@@ -24,6 +24,8 @@
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    "noImplicitAny": false,
+    "suppressImplicitAnyIndexErrors": true
   }
 }
