--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve --hmr --proxy-config proxy.conf.js",
     "build": "ng build --localize --configuration production",
+    "build-stats": "ng build --localize --configuration production --stats-json",
+    "analyse": "webpack-bundle-analyzer dist/manager/de/stats.json",
     "test": "ng test --browsers ChromeHeadless --watch=false --code-coverage=true",
     "test-chromium": "ng test --browsers ChromiumHeadless --watch=false --code-coverage=true",
     "test-local": "ng test --browsers Chromium --watch=true",
@@ -71,6 +73,7 @@
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "~8.3.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.4.4",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
