spring boot update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.codec.max-in-memory-size=2MB
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 server.servlet.session.timeout=30s
 
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DATABASE_TO_LOWER=true;CASE_INSENSITIVE_IDENTIFIERS=true
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;CASE_INSENSITIVE_IDENTIFIERS=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -23,7 +23,7 @@ spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+//spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.show-sql=true
 
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
