--- a/src/angular/manager/package.json
+++ b/src/angular/manager/package.json
@@ -33,7 +33,7 @@
     "@angular/platform-browser": "^13.1.3",
     "@angular/platform-browser-dynamic": "^13.1.3",
     "@angular/router": "^13.1.3",
-    "ngx-simple-charts": "^13.2.1",
+    "ngx-simple-charts": "^13.3.1",
     "material-design-icons": "3.0.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
@@ -58,6 +58,8 @@
     "@typescript-eslint/parser": "^5.10.0",
     "cpx": "^1.5.0",
     "eslint": "^7.26.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
     "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.2",
