--- a/helm/kafka/templates/kubTemplate.yaml
+++ b/helm/kafka/templates/kubTemplate.yaml
@@ -31,7 +31,7 @@ spec:
   capacity:
     storage: 1Gi
   hostPath:
-    path: /data/postgres1
+    path: /data/kafka1
     type: DirectoryOrCreate
 ---
 apiVersion: v1
@@ -70,22 +70,15 @@ spec:
         image: "{{ .Values.dbImageName }}:{{ .Values.dbImageVersion }}"
         resources:
           limits:
-            memory: "2G"
-            cpu: "1.5"
+            memory: "768M"
+            cpu: "0.5"
           requests:
             memory: "1G"
             cpu: "0.5"
         env:
           {{- include "helpers.list-envDb-variables" . | indent 10 }}
         ports:
-        - containerPort: 5432
-        volumeMounts:
-        - name: hostvol
-          mountPath: /var/lib/postgresql/data
-      volumes:
-      - name: hostvol
-        persistentVolumeClaim:
-          claimName: {{ .Values.volumeClaimName }}
+        - containerPort: 2181
 ---
 apiVersion: v1
 kind: Service
@@ -95,7 +88,7 @@ metadata:
     app: {{ .Values.dbServiceName }}
 spec:
   ports:
-  - port: 5432
+  - port: 2181
     protocol: TCP
   selector:
     app: {{ .Values.dbName }}
@@ -123,26 +116,21 @@ spec:
         resources:
           limits:
             memory: "1G"
-            cpu: "0.5"
+            cpu: "1.5"
           requests:
             memory: "768M"
-            cpu: "0.5"
+            cpu: "1.0"
         env:
           {{- include "helpers.list-envApp-variables" . | indent 10 }}
         ports:
-        - containerPort: 8080
-        livenessProbe:
-          httpGet:
-            path: "/actuator/health/livenessState"
-            port: 8080
-          initialDelaySeconds: 5
-          periodSeconds: 5
-        startupProbe:
-          httpGet:
-            path: "/actuator/health/readinessState"
-            port: 8080
-          failureThreshold: 60
-          periodSeconds: 5
+        - containerPort: 9092
+        volumeMounts:
+        - name: hostvol
+          mountPath: /bitnami/kafka
+      volumes:
+      - name: hostvol
+        persistentVolumeClaim:
+          claimName: {{ .Values.volumeClaimName }}
 ---
 apiVersion: v1
 kind: Service
@@ -153,7 +141,7 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 8080
+  - port: 9092
     protocol: TCP
   selector:
     app: {{ .Values.webAppName }}
