--- a/helm/kafka/values.yaml
+++ b/helm/kafka/values.yaml
@@ -19,13 +19,13 @@ envDb:
   normal: 
     ALLOW_ANONYMOUS_LOGIN: yes
   secret:
-   ZOOKEEPER_TICK_TIME: 2000
+   ZOOKEEPER_TICK_TIME: "2000"
     
 envApp:
   normal: 
-    KAFKA_BROKER_ID: 1
+    KAFKA_BROKER_ID: "1"
     KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
     KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://127.0.0.1:9092
     KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: true
   secret:
-    KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
