--- a/helm/kafka/values.yaml
+++ b/helm/kafka/values.yaml
@@ -29,4 +29,4 @@ envApp:
     KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: true
     ALLOW_PLAINTEXT_LISTENER: yes
   secret:
-    KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+    KAFKA_ZOOKEEPER_CONNECT: "zookeeperservice:2181"  
