--- a/helm/kafka/values.yaml
+++ b/helm/kafka/values.yaml
@@ -24,8 +24,9 @@ envDb:
 envApp:
   normal: 
     KAFKA_BROKER_ID: "1"
+    KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
     KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
-    KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://127.0.0.1:9092
+    KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://:9092
     KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: true
     ALLOW_PLAINTEXT_LISTENER: yes
   secret:
