--- a/backend/src/main/resources/application-kafka.properties
+++ b/backend/src/main/resources/application-kafka.properties
@@ -1,4 +1,4 @@
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=192.168.49.2:9092
 spring.kafka.producer.compression-type=gzip
 spring.kafka.producer.transaction-id-prefix: tx-
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
@@ -9,3 +9,8 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.consumer.isolation-level=read_committed
+#spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+#spring.kafka.consumer.properties.spring.json.trusted.packages=*
+#spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
