--- a/backend/src/main/resources/application-kafka.properties
+++ b/backend/src/main/resources/application-kafka.properties
@@ -9,6 +9,7 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.consumer.isolation-level=read_committed
+spring.kafka.consumer.transaction-id-prefix: tx-
 #spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 #spring.kafka.consumer.value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
 #spring.kafka.consumer.properties.spring.json.trusted.packages=*
