docs: next spring version

--- a/backend/src/main/resources/application-kafka.properties
+++ b/backend/src/main/resources/application-kafka.properties
@@ -15,3 +15,4 @@ spring.kafka.consumer.transaction-id-prefix: tx-
 #spring.kafka.consumer.properties.spring.json.trusted.packages=*
 #spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+#spring.kafka.producer.properties.spring.json.trusted.packages=*
