--- a/backend/src/main/resources/application-prod-kafka.properties
+++ b/backend/src/main/resources/application-prod-kafka.properties
@@ -9,3 +9,4 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.consumer.isolation-level=read_committed
+spring.kafka.consumer.transaction-id-prefix: tx-
