--- a/helm/kafka/values.yaml
+++ b/helm/kafka/values.yaml
@@ -27,7 +27,7 @@ envApp:
     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
     KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
     KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://:9092
-    KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: true
+    KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: false
     ALLOW_PLAINTEXT_LISTENER: yes
   secret:
     KAFKA_ZOOKEEPER_CONNECT: "zookeeperservice:2181"  
