--- a/backend/src/main/resources/application-prod-kafka.properties
+++ b/backend/src/main/resources/application-prod-kafka.properties
@@ -1,5 +1,5 @@
-kafka.server.name=${KAFKA_SERVER_NAME:kafkaapp}
-spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVER}
+kafka.server.name=${KAFKA_SERVER_NAME:kafkaapp:}
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 spring.kafka.producer.compression-type=gzip
 spring.kafka.producer.transaction-id-prefix: tx-
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
