--- a/helm/angularportfoliomgr/values.yaml
+++ b/helm/angularportfoliomgr/values.yaml
@@ -55,7 +55,7 @@ envApp:
     JPA_SHOW_SQL: true
     H2_CONSOLE: false
   secret:    
-    KAFKA_BOOTSTRAP_SERVERS: kafkaapp:9092 
+    KAFKA_BOOTSTRAP_SERVERS: kafkaservice:9092 
     JWTTOKEN_SECRET: secret-key1234567890abcdefghijklmnopqrstuvwxyz
     POSTGRES_USER: dbuser
     POSTGRES_PASSWORD: passwordtoreplace
