--- a/backend/src/main/resources/application-prod-kafka.properties
+++ b/backend/src/main/resources/application-prod-kafka.properties
@@ -1,4 +1,4 @@
-kafka.server.name=${KAFKA_SERVER_NAME:kafkaapp:}
+kafka.server.name=${KAFKA_SERVER_NAME:kafkaapp}
 spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 spring.kafka.producer.compression-type=gzip
 spring.kafka.producer.transaction-id-prefix: tx-
