--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -42,11 +42,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.3",
-    "@angular-eslint/builder": "^13.0.1",
-    "@angular-eslint/eslint-plugin": "^13.0.1",
-    "@angular-eslint/eslint-plugin-template": "^13.0.1",
-    "@angular-eslint/schematics": "^13.0.1",
-    "@angular-eslint/template-parser": "^13.0.1",
+    "@angular-eslint/builder": "^14.0.0-alpha.0",
+    "@angular-eslint/eslint-plugin": "^14.0.0-alpha.0",
+    "@angular-eslint/eslint-plugin-template": "^14.0.0-alpha.0",
+    "@angular-eslint/schematics": "^14.0.0-alpha.0",
+    "@angular-eslint/template-parser": "^14.0.0-alpha.0",
     "@angular/cli": "~13.1.3",
     "@angular/compiler-cli": "~13.1.3",
     "@angular/language-service": "~13.1.3",
