--- a/frontend/src/angular/angular.json
+++ b/frontend/src/angular/angular.json
@@ -148,9 +148,10 @@
       }
     }
   },
-  "defaultProject": "manager",
   "cli": {
     "analytics": false,
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
