--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -21,18 +21,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.1.3",
+    "@angular/animations": "^14.0.0",
     "@angular/cdk": "^13.1.3",
-    "@angular/common": "^13.1.3",
-    "@angular/compiler": "^13.1.3",
-    "@angular/core": "^13.1.3",
-    "@angular/forms": "^13.1.3",
-    "@angular/localize": "^13.1.3",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/localize": "^14.0.0",
     "@angular/material": "^13.1.3",
     "@angular/material-luxon-adapter": "^13.1.3",
-    "@angular/platform-browser": "^13.1.3",
-    "@angular/platform-browser-dynamic": "^13.1.3",
-    "@angular/router": "^13.1.3",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
     "ngx-simple-charts": "^13.3.3",
     "material-design-icons": "3.0.1",
     "rxjs": "~7.4.0",
@@ -41,15 +41,15 @@
     "core-js": "^3.19.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.3",
+    "@angular-devkit/build-angular": "^14.0.0",
     "@angular-eslint/builder": "^14.0.0-alpha.0",
     "@angular-eslint/eslint-plugin": "^14.0.0-alpha.0",
     "@angular-eslint/eslint-plugin-template": "^14.0.0-alpha.0",
     "@angular-eslint/schematics": "^14.0.0-alpha.0",
     "@angular-eslint/template-parser": "^14.0.0-alpha.0",
-    "@angular/cli": "~13.1.3",
-    "@angular/compiler-cli": "~13.1.3",
-    "@angular/language-service": "~13.1.3",
+    "@angular/cli": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
+    "@angular/language-service": "^14.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/luxon": "^2.0.0",
@@ -75,7 +75,7 @@
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "~10.4.0",
-    "typescript": "~4.4.4",
+    "typescript": "~4.7.3",
     "webpack-bundle-analyzer": "^4.5.0"
   }
 }
