--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -33,7 +33,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "ngx-simple-charts": "^13.3.3",
+    "ngx-simple-charts": "^14.0.0-alpha-0",
     "material-design-icons": "3.0.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
@@ -53,7 +53,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/luxon": "^2.0.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^14.0.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "cpx": "^1.5.0",
