--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,7 +10,9 @@ server.compression.min-response-size=2KB
 spring.codec.max-in-memory-size=2MB
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 server.servlet.session.timeout=30s
+server.shutdown=graceful
 
+spring.lifecycle.timeout-per-shutdown-phase=${SHUTDOWN_PHASE:3s}
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;CASE_INSENSITIVE_IDENTIFIERS=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
