--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -35,7 +35,7 @@ spring.jpa.hibernate.ddl-auto=validate
 //spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.show-sql=true
 
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.change-log=classpath:/dbchangelog/db.changelog-master.xml
 
 //Gmail
 spring.mail.host=smtp.gmail.com
