--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -11,8 +11,8 @@
    limitations under the License.
  */
 plugins {
-	id 'org.springframework.boot' version '2.7.4'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '3.0.0-RC2'
+	id 'io.spring.dependency-management' version '1.1.0'
 	id 'java'    
 }
 
@@ -22,6 +22,7 @@ sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
 }
 
 dependencies {
