feat: starts working

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,15 +25,16 @@ spring.jpa.properties.hibernate.batch_versioned_data=true
 spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.jpa.properties.hibernate.order_inserts=true 
 spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.id.db_structure_naming_strategy=legacy
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = true
+spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
-spring.jpa.hibernate.ddl-auto=validate
-//spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.show-sql=true
 
 spring.liquibase.change-log=classpath:/dbchangelog/db.changelog-master.xml
 
