--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -16,7 +16,7 @@
     "prebuild": "rimraf ./dist && mkdirp ./dist",
     "postbuild": "npm run deploy",
     "predeploy": "rimraf ../../../src/main/resources/static/*",
-    "deploy": "cpx 'base/*' dist/manager/ && cpx 'dist/manager/**' ../../../backend/src/main/resources/static/",
+    "deploy": "cpy 'base/*' dist/manager/ && cpy 'dist/manager/**' ../../../backend/src/main/resources/static/",
     "prettier": "npx prettier --write 'src/**/*.{ts,html,scss,json}'",
     "extract-i18n": "ng extract-i18n --format=json"
   },
