--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -35,8 +35,8 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
-
 spring.liquibase.change-log=classpath:/dbchangelog/db.changelog-master.xml
+#spring.liquibase.paramteters.liquibase.duplicateFileMode=WARN
 
 //Gmail
 spring.mail.host=smtp.gmail.com
